spade-tests/src/snapshots/spade_tests__parser__wrong_enum_variant_items_opener.snap
---
source: spade-tests/src/parser.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Unexpected `(`, expected `{`, `,`, or `}`
  ┌─ testinput:2:6
  │
2 │     A(int: int<4>),
  │      ^ expected `{`, `,`, or `}`
  │
  = Use `{` if you want to add items to this enum variant
  │
2 │     A{int: int<4>},
  │      ~           ~


